--- a/meta.tex
+++ b/meta.tex
@@ -1,14 +1,14 @@
 % Auteur du document (étudiant-e) en projet de Bachelor
-\author{Maria Bernasconi}
+\author{Alessandro Duca}
 
 % Activer l'option pour l'accord du féminin dans le texte
-\genre{female}
+\genre{male}
 
 % Titre de votre travail de Bachelor
-\title{Modèle \LaTeX~de rapport de Bachelor}
+\title{Maquette de démonstration d'un pendule inversé}
 
 % Le sous titre est optionnel
-\subtitle{Travail de Bachelor}
+%\subtitle{Travail de Bachelor}
 
 % Nom du professeur responsable
 \teacher {Prof. Y. Chevallier (HEIG-VD)}
