Cahier des charges

--- a/report.tex
+++ b/report.tex
@@ -1,6 +1,6 @@
 \documentclass[
     iai, % Saisir le nom de l'institut rattaché
-    mit, % Saisir le nom de l'orientation
+    mi, % Saisir le nom de l'orientation
     %confidential, % Décommentez si le travail est confidentiel
 ]{heig-tb}
 
@@ -57,10 +57,9 @@
 \mainmatter
 \chapter{Introduction}
 \input{introduction.tex}
-\input{examples.tex}
 
-\chapter{Conclusion}
-\input{conclusion.tex}
+\chapter{Cahier des charges fonctionnel}
+\input{CahierDesCharges.tex}
 
 \clearpage
 \printbibliography
