--- a/abstract.tex
+++ b/abstract.tex
@@ -1,7 +1,21 @@
-% Francais
-\lipsum[1]
+% Résumé du projet
+Ce projet porte sur la fabrication et la programmation d'un pendule inverse. Celui-ci doit être assemblé avec les demandes
+suivantes:
+\begin{itemize}
+    \item La structure principale est faite de profilé en aluminium.
+    \item Un moteur linéaire sans coeur en fer est utilisé pour entrainer le système avec le moins de frottements possible.
+    \item La tige du pendule est iluminée par des leds.
+\end{itemize}
 
-\asterism
+La programmation, elle, sera faite à l'aide de boucles de régulations PID. Ces dernières permettront de maintenir la tige du pendule
+en équilibre instable ainsi qu'au centre de la structure.\\
 
-% English
-\lipsum[3]
+Le travail à fournir est donc le suivant:
+\begin{itemize}
+    \item Développement de la structure en profilé.
+    \item Création de l'entraînement mécanique du système avec guidage.
+    \item Mise en place de la mesure de position linéaire du pendule ainsi que de la position angulaire de la tige.
+    \item Création d'un boîtier d'alimentation électrique permettant au système de fonctionner avec une prise 230V classique.
+    \item Commande et assemblage des différentes pièces nécessaire du système.
+    \item Programmation des boucles de régulations du pendule.
+\end{itemize}
