--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,39 +1,63 @@
-@book{typo,
-  author    = {},
-  title     = {Lexique des règles typographiques en usage à l'Imprimerie nationale},
-  publisher = {L'Imprimerie nationale},
-  year      = {2002},
-  address   = {Paris},
-  isbn      = {2-7433-0482-0}
+@online{NormeISO,
+  author   = {Segway},
+  title    = {Norme EN ISO 12100 Suva 2010},
+  url      = {https://www.iso.org/fr/standard/51528.html},
+  addendum = {(accessed: 09.06.2023)},
+  keywords = {Normes,ISO}
 }
 
-@online{knuthwebsite,
-    author = "Donald Knuth",
-    title = "Knuth: Computers and Typesetting",
-    url  = "http://www-cs-faculty.stanford.edu/~uno/abcde.html",
-    addendum = "(accessed: 01.09.2016)",
-    keywords = "latex,knuth"
+@online{Segway,
+  author   = {Segway},
+  title    = {Site officiel Segway},
+  url      = {http://www.segway.ch/fr/produkte/i2/index.php},
+  addendum = {(accessed: 09.06.2023)},
+  keywords = {Segway}
 }
 
-@article{einstein,
-    author = "Albert Einstein",
-    title = "{Zur Elektrodynamik bewegter K{\"o}rper}. ({German})
-    [{On} the electrodynamics of moving bodies]",
-    journal = "Annalen der Physik",
-    volume = "322",
-    number = "10",
-    pages = "891--921",
-    year = "1905",
-    DOI = "http://dx.doi.org/10.1002/andp.19053221004",
-    keywords = "physics"
+@online{Instructables,
+  author   = {KousheekC},
+  title    = {Inverted Pendulum: Control Theory and Dynamics},
+  url      = {https://www.instructables.com/Inverted-Pendulum-Control-Theory-and-Dynamics/},
+  addendum = {(accessed: 09.06.2023)},
+  keywords = {Instructables}
 }
 
-@book{dirac,
-    title = {The Principles of Quantum Mechanics},
-    author = {Paul Adrien Maurice Dirac},
-    isbn = {9780198520115},
-    series = {International series of monographs on physics},
-    year = {1981},
-    publisher = {Clarendon Press},
-    keywords = {physics}
+@online{Quanser,
+  author   = {Quanser},
+  title    = {Quanser},
+  url      = {https://www.quanser.com/products/linear-servo-base-unit-inverted-pendulum/},
+  addendum = {(accessed: 09.06.2023)},
+  keywords = {Quanser}
 }
+
+% @article{einstein,
+%     author = "Albert Einstein",
+%     title = "{Zur Elektrodynamik bewegter K{\"o}rper}. ({German})
+%     [{On} the electrodynamics of moving bodies]",
+%     journal = "Annalen der Physik",
+%     volume = "322",
+%     number = "10",
+%     pages = "891--921",
+%     year = "1905",
+%     DOI = "http://dx.doi.org/10.1002/andp.19053221004",
+%     keywords = "physics"
+% }
+
+% @book{typo,
+%   author    = {},
+%   title     = {Lexique des règles typographiques en usage à l'Imprimerie nationale},
+%   publisher = {L'Imprimerie nationale},
+%   year      = {2002},
+%   address   = {Paris},
+%   isbn      = {2-7433-0482-0}
+% }
+
+% @book{dirac,
+%     title = {The Principles of Quantum Mechanics},
+%     author = {Paul Adrien Maurice Dirac},
+%     isbn = {9780198520115},
+%     series = {International series of monographs on physics},
+%     year = {1981},
+%     publisher = {Clarendon Press},
+%     keywords = {physics}
+% }
