--- a/introduction.tex
+++ b/introduction.tex
@@ -1,5 +1,15 @@
-L'introduction est une section requise dans un rapport technique. Introduisez votre travail, l'idée de départ et les objectifs attendus. Un lecteur qui découvrirait votre projet au travers de cette introduction devrait ainsi être capable d'en comprendre le cadre, l'idée générale et les aboutissants du projet.
+%Introduction
+Rien ne représente mieux la régulation qu'un pendule inverse. L'objectif principal est d'avoir une maquette qui illustre la régulation
+afin de pouvoir l'expliquer facilement. Le projet est très complet dans le sens où plusieurs domaines vont être nécessaire pour en venir
+à bout. Il y a du développement mécanique avec la structure qui permet le maintient ainsi que le déplacement horizontal du système.
+Il y a de la programmation pour pouvoir déplacer le système afin qu'il reste en équilibre et ce malgré des perturbations, grâce à la
+régulation PID. Il y a aussi une partie d'électricité avec la mise en place d'un boîtier d'alimentation électrique fonctionnant avec une
+prise électrique classique de 230V.\\
+
+Le projet abouti est une structure du pendule entièrement assemblée qui peut connaître sa position linéaire et angulaire, être commandé
+en déplacement horizontal et peut maintenir la position d'équilibre instable de la tige au centre du système.
 
 \section{Contexte}
-Cette section \underline{n'est pas obligatoire}, mais elle est souvent présente dans un rapport technique pour compléter l'introduction et définir le contexte du travail \cad le cadre formel dans lequel le travail est mené.
-
+C'est l'institut d'automatisation industrielle de la HEIG-VD qui a proposé de fabriquer un pendule inversé dans le cadre d'un travail
+de Bachelor. Le pendule pourra être utilisé par la suite comme exemple de régulation lors d'événements servant à présenter l'HEIG.
+Dans ce but là, une place en C26 a été mise à disposition pour travailler et un budget de maximum 10'000 CHF est utilisable.
