--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -131,7 +131,7 @@ L'exemple de pendule inversé le plus connu est le Segway \cite{Segway} qui util
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width = \textwidth]{assets/figures/AnalyseFAST.png}
+    \includegraphics[width = 0.3\textwidth]{assets/figures/Segway.png}
     \caption{Image d'un Segway \cite{Segway}}
     \label{fig:Segway}
 \end{figure}
@@ -145,7 +145,7 @@ Le suivant est un projet Instructables avec des éléments assez simples et peu 
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width = \textwidth]{assets/figures/PenduleInstructables.jpg}
+    \includegraphics[width = 0.8\textwidth]{assets/figures/PenduleInstructables.jpg}
     \caption{Image du montage du pendule inversé d'Instructables \cite{Instructables}}
     \label{fig:Instructables}
 \end{figure}
@@ -155,7 +155,7 @@ Le pendule de chez Quanser est plus précis et possède une réponse plus rapide
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width = \textwidth]{assets/figures/PenduleQuanser.png}
+    \includegraphics[width = 0.6\textwidth]{assets/figures/PenduleQuanser.png}
     \caption{Image du pendule inversé de Quanser \cite{Quanser}}
     \label{fig:Quanser}
 \end{figure}
