Ajout des solutions

--- a/Annexes.tex
+++ b/Annexes.tex
@@ -35,3 +35,38 @@
 
 % Pieds réglables
 \textbf{Pieds réglables GN6311.6, Elesa}
+
+\iffalse
+
+    %Anneau de LEDs
+    \includepdf[pages=-]{Annexes/anneau de Led.pdf}
+
+    % Boitier et composants d'alimentation
+    \includepdf[pages=-]{Annexes/Boitier alimentation}
+    \includepdf[pages=-]{Annexes/Arret d'urgence}
+    \includepdf[pages=-]{Annexes/Bouton d'alimentation}
+    \includepdf[pages=-]{Annexes/Bouton lumineux}
+    \includepdf[pages=-]{Annexes/Convertisseur AC-DC 48V}
+    \includepdf[pages=-]{Annexes/Convertisseur 48V-5V}
+
+    % Encodeur
+    \includepdf[pages=-]{Annexes/Encodeur TMCS-20}
+    \includepdf[pages=-]{Annexes/Montage encodeur}
+
+    % Roulements
+    \includepdf[pages=-]{Annexes/Roulement SKF W 61700 X-2RS1}
+
+    % Moteur linéaire
+    \includepdf[pages=-]{Annexes/Moteur lineaire}
+
+    % Driver Moteur
+    \includepdf[pages=-]{Annexes/EPOS4-Module-Compact}
+
+    % Règle linéaire
+    \includepdf[pages=-]{Annexes/Montage regle lineaire}
+    \includepdf[pages=-]{Annexes/Tete de lecture}
+
+    % Pieds réglables
+    \includepdf[pages=-]{Annexes/Pieds reglable}
+
+\fi
