--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -4,8 +4,8 @@ Il convient de développer, assembler et faire fonctionner la maquette du pendul
 
 \begin{figure}[H]
     \centering
-    \includegraphics*[width = 0.5\textwidth]{assets/figures/IllustrationPendule.png}
-    \caption{illustration du pendule inversé demandé.}
+    \includegraphics[width = 0.5\textwidth]{assets/figures/IllustrationPendule.png}
+    \caption{Illustration du pendule inversé demandé}
     \label{fig:Illustration}
 \end{figure}
 
