--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,5 +1,5 @@
 @online{NormeISO,
-  author   = {Segway},
+  author   = {ISO},
   title    = {Norme EN ISO 12100 Suva 2010},
   url      = {https://www.iso.org/fr/standard/51528.html},
   addendum = {(accessed: 09.06.2023)},
@@ -28,6 +28,110 @@
   url      = {https://www.quanser.com/products/linear-servo-base-unit-inverted-pendulum/},
   addendum = {(accessed: 09.06.2023)},
   keywords = {Quanser}
+}
+
+@online{Item,
+  author   = {Item},
+  title    = {Item},
+  url      = {https://www.item24.com/fr-ch},
+  addendum = {(accessed: 13.06.2023)},
+  keywords = {Item, profilé}
+}
+
+@online{Elesa,
+  author   = {Elesa},
+  title    = {Elesa},
+  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  addendum = {(accessed: 13.06.2023)},
+  keywords = {Elesa, pieds}
+}
+
+@online{Heidenhain,
+  author   = {Heidenhain},
+  title    = {Heidenhain},
+  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  addendum = {(accessed: 13.06.2023)},
+  keywords = {Heidenhain}
+}
+
+@online{Etel,
+  author   = {Etel},
+  title    = {Etel},
+  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  addendum = {(accessed: 13.06.2023)},
+  keywords = {Etel}
+}
+
+@online{DDautoTech,
+  author   = {DDautoTech},
+  title    = {DDautoTech},
+  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  addendum = {(accessed: 13.06.2023)},
+  keywords = {DDautoTech}
+}
+
+@online{ESRPollmeier,
+  author   = {ESRPollmeier},
+  title    = {ESRPollmeier},
+  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  addendum = {(accessed: 13.06.2023)},
+  keywords = {ESRPollmeier}
+}
+
+@online{TDSPrecisionProducts,
+  author   = {TDSPrecisionProducts},
+  title    = {TDSPrecisionProducts},
+  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  addendum = {(accessed: 13.06.2023)},
+  keywords = {TDSPrecisionProducts}
+}
+
+@online{Schneeberger,
+  author   = {Schneeberger},
+  title    = {Schneeberger},
+  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  addendum = {(accessed: 13.06.2023)},
+  keywords = {Schneeberger}
+}
+
+@online{Hiwin,
+  author   = {Hiwin},
+  title    = {Hiwin},
+  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  addendum = {(accessed: 13.06.2023)},
+  keywords = {Hiwin}
+}
+
+@online{RLS,
+  author   = {RLS},
+  title    = {RLS},
+  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  addendum = {(accessed: 13.06.2023)},
+  keywords = {RLS}
+}
+
+@online{Ewellix,
+  author   = {Ewellix},
+  title    = {Ewellix},
+  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  addendum = {(accessed: 13.06.2023)},
+  keywords = {Ewellix}
+}
+
+@online{Rollon,
+  author   = {Rollon},
+  title    = {Rollon},
+  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  addendum = {(accessed: 13.06.2023)},
+  keywords = {Rollon}
+}
+
+@online{Igus,
+  author   = {Igus},
+  title    = {Igus},
+  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  addendum = {(accessed: 13.06.2023)},
+  keywords = {Igus}
 }
 
 % @article{einstein,
