--- a/report.tex
+++ b/report.tex
@@ -34,19 +34,19 @@
 
 %% Résumé / Résumé publiable / Version abrégée
 \begin{abstract}
-    \input{abstract}
+  \input{abstract}
 \end{abstract}
 
 %% Sommaire et tables
 \clearemptydoublepage
 {
-    \tableofcontents
-    \let\cleardoublepage\clearpage
-    \listoffigures
-    \let\cleardoublepage\clearpage
-    \listoftables
-    \let\cleardoublepage\clearpage
-    \listoflistings
+  \tableofcontents
+  \let\cleardoublepage\clearpage
+  \listoffigures
+  \let\cleardoublepage\clearpage
+  \listoftables
+  \let\cleardoublepage\clearpage
+  \listoflistings
 }
 
 \printnomenclature
@@ -60,6 +60,9 @@
 
 \chapter{Cahier des charges fonctionnel}
 \input{CahierDesCharges.tex}
+
+\chapter{Solutions}
+\input{Solutions.tex}
 
 \clearpage
 \printbibliography
