Fixed acronyms and added Solutions

--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -1,6 +1,6 @@
 \section{Description du problème}\label{sec:DescProb}
-Le mandataire, la HEIG-VD ou plus particulièrement l'iAi, souhaiterait disposer d'une maquette de démonstration pour les différents événements qui servent à présenter l'école. Elle aimerait pouvoir mon-trer un exemple classique de régulation avec un pendule inversé.
-Il convient de développer, assembler et faire fonctionner la maquette du pendule inversé pour les événements à venir. Le pendule est libre en rotation autour d'un axe et l'équilibre doit être obtenu par dé-placement linéaire selon un seul axe. Le pendule demandé est représenté dans la figure \ref{fig:Illustration}
+Le mandataire, la \acrshort{Heig} ou plus particulièrement l'\acrshort{iAi}, souhaiterait disposer d'une maquette de démonstration pour les différents événements qui servent à présenter l'école. Elle aimerait pouvoir montrer un exemple classique de régulation avec un pendule inversé.
+Il convient de développer, assembler et faire fonctionner la maquette du pendule inversé pour les événements à venir. Le pendule est libre en rotation autour d'un axe et l'équilibre doit être obtenu par déplacement linéaire selon un seul axe. Le pendule demandé est représenté dans la figure \ref{fig:Illustration}
 
 \begin{figure}[H]
     \centering
