--- a/bibliography.bib
+++ b/bibliography.bib
@@ -49,7 +49,7 @@
 @online{Heidenhain,
   author   = {Heidenhain},
   title    = {Heidenhain},
-  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  url      = {https://www.heidenhain.com/},
   addendum = {(accessed: 13.06.2023)},
   keywords = {Heidenhain}
 }
@@ -57,7 +57,7 @@
 @online{Etel,
   author   = {Etel},
   title    = {Etel},
-  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  url      = {https://www.etel.ch/},
   addendum = {(accessed: 13.06.2023)},
   keywords = {Etel}
 }
@@ -65,7 +65,7 @@
 @online{DDautoTech,
   author   = {DDautoTech},
   title    = {DDautoTech},
-  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  url      = {https://www.ddautotech.com/},
   addendum = {(accessed: 13.06.2023)},
   keywords = {DDautoTech}
 }
@@ -73,7 +73,7 @@
 @online{ESRPollmeier,
   author   = {ESRPollmeier},
   title    = {ESRPollmeier},
-  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  url      = {https://www.esr-pollmeier.de/en/},
   addendum = {(accessed: 13.06.2023)},
   keywords = {ESRPollmeier}
 }
@@ -81,7 +81,7 @@
 @online{TDSPrecisionProducts,
   author   = {TDSPrecisionProducts},
   title    = {TDSPrecisionProducts},
-  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  url      = {https://www.tds-pp.com/en/},
   addendum = {(accessed: 13.06.2023)},
   keywords = {TDSPrecisionProducts}
 }
@@ -89,7 +89,7 @@
 @online{Schneeberger,
   author   = {Schneeberger},
   title    = {Schneeberger},
-  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  url      = {https://www.schneeberger.com/fr/ch/},
   addendum = {(accessed: 13.06.2023)},
   keywords = {Schneeberger}
 }
@@ -97,7 +97,7 @@
 @online{Hiwin,
   author   = {Hiwin},
   title    = {Hiwin},
-  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  url      = {https://www.hiwin.de/fr/},
   addendum = {(accessed: 13.06.2023)},
   keywords = {Hiwin}
 }
@@ -105,7 +105,7 @@
 @online{RLS,
   author   = {RLS},
   title    = {RLS},
-  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  url      = {https://www.rls.si/eng/},
   addendum = {(accessed: 13.06.2023)},
   keywords = {RLS}
 }
@@ -113,7 +113,7 @@
 @online{Ewellix,
   author   = {Ewellix},
   title    = {Ewellix},
-  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  url      = {https://www.ewellix.com/en},
   addendum = {(accessed: 13.06.2023)},
   keywords = {Ewellix}
 }
@@ -121,7 +121,7 @@
 @online{Rollon,
   author   = {Rollon},
   title    = {Rollon},
-  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  url      = {https://www.rollon.com/fra/fr/},
   addendum = {(accessed: 13.06.2023)},
   keywords = {Rollon}
 }
@@ -129,7 +129,7 @@
 @online{Igus,
   author   = {Igus},
   title    = {Igus},
-  url      = {https://www.elesa.com/fr/elesab2bstorech},
+  url      = {https://www.igus.ch/?c=ch&L=fr},
   addendum = {(accessed: 13.06.2023)},
   keywords = {Igus}
 }
