--- a/introduction.tex
+++ b/introduction.tex
@@ -10,6 +10,6 @@ Le projet abouti est une structure du pendule entièrement assemblée qui peut c
 en déplacement horizontal et peut maintenir la position d'équilibre instable de la tige au centre du système.
 
 \section{Contexte}
-C'est l'institut d'automatisation industrielle de la HEIG-VD qui a proposé de fabriquer un pendule inversé dans le cadre d'un travail
-de Bachelor. Le pendule pourra être utilisé par la suite comme exemple de régulation lors d'événements servant à présenter l'HEIG.
+C'est l'\acrlong{iAi} de la \acrshort{Heig} qui a proposé de fabriquer un pendule inversé dans le cadre d'un travail
+de Bachelor. Le pendule pourra être utilisé par la suite comme exemple de régulation lors d'événements servant à présenter l'\acrshort{Heig}.
 Dans ce but là, une place en C26 a été mise à disposition pour travailler et un budget de maximum 10'000 CHF est utilisable.
