--- a/report.tex
+++ b/report.tex
@@ -6,7 +6,7 @@
 
 \usepackage[nooldvoltagedirection,european,americaninductors]{circuitikz}
 
-\signature{mbernasconi.svg} % Remplacer par votre propre signature vectorielle.
+\signature{Signature.svg} % Remplacer par votre propre signature vectorielle.
 
 \makenomenclature
 \makenoidxglossaries
@@ -45,8 +45,6 @@
   \listoffigures
   \let\cleardoublepage\clearpage
   \listoftables
-  \let\cleardoublepage\clearpage
-  \listoflistings
 }
 
 \printnomenclature
@@ -60,6 +58,9 @@
 
 \chapter{Cahier des charges fonctionnel}
 \input{CahierDesCharges.tex}
+
+\chapter{Calculs préliminaires}
+\input{CalculPre.tex}
 
 \chapter{Solutions}
 \input{Solutions.tex}
