--- a/acronyms.tex
+++ b/acronyms.tex
@@ -1,2 +1,3 @@
-\newacronym{gcd}{GCD}{Plus grand diviseur commun}
-\newacronym{lcm}{LCM}{Plus petit multiple commun}
+\newacronym{Heig}{HEIG}{Haute École d'Ingénieurie et de Gestion}
+\newacronym{TB}{TB}{Travail de Bachelor}
+\newacronym{iAi}{iAi}{Institut d'Automatisation Industrielle de la HEIG}
