--- a/acronyms.tex
+++ b/acronyms.tex
@@ -1,3 +1,5 @@
 \newacronym{Heig}{HEIG}{Haute École d'Ingénieurie et de Gestion}
 \newacronym{TB}{TB}{Travail de Bachelor}
 \newacronym{iAi}{iAi}{Institut d'Automatisation Industrielle de la HEIG}
+\newacronym{PC}{PC}{Polycarbonate}
+\newacronym{PLA}{PLA}{Acide polylactique}
