--- a/bibliography.bib
+++ b/bibliography.bib
@@ -134,6 +134,22 @@
   keywords = {Igus}
 }
 
+@online{Festo,
+  author   = {Festo},
+  title    = {Festo},
+  url      = {https://www.festo.com/ch/fr/},
+  addendum = {(accessed: 15.06.2023)},
+  keywords = {Festo}
+}
+
+@online{Trinamic,
+  author   = {Trinamic},
+  title    = {Trinamic},
+  url      = {https://www.trinamic.com/},
+  addendum = {(accessed: 15.06.2023)},
+  keywords = {Trinamic}
+}
+
 % @article{einstein,
 %     author = "Albert Einstein",
 %     title = "{Zur Elektrodynamik bewegter K{\"o}rper}. ({German})
