--- a/glossary.tex
+++ b/glossary.tex
@@ -10,7 +10,12 @@
     name=latex,
     description={Un langage et un système de composition de documents}
 }
-\newglossaryentry{maths}{
-    name=mathematics,
-    description={Les mathematiques sont ce que les mathématiciens fonts}
+\newglossaryentry{glider}{
+    name=glider,
+    description={Partie mobile du moteur linéaire}
+}
+
+\newglossaryentry{contact Reed}{
+    name=contact Reed,
+    description={Type de contacteur à languette, les champs magnétique font bouger la languette permettant de faire ou d'enlever le contact}
 }
