Added Blueprints for created parts

--- a/Annexes.tex
+++ b/Annexes.tex
@@ -36,6 +36,17 @@
 % Pieds réglables
 \textbf{Pieds réglables GN6311.6, Elesa}
 
+%Mises en plans des pièces mécaniques
+\textbf{Mise en plan du couplage de l'encodeur}
+\newline \textbf{Mise en plan du couplage de la tige}
+\newline \textbf{Mise en plan de la liaison du chariot}
+\newline \textbf{Mise en plan de la liaison du moteur}
+\newline \textbf{Mise en plan du support de l'amortisseur}
+\newline \textbf{Mise en plan du deuxième support de l'amortisseur}
+\newline \textbf{Mise en plan du support de guidage de câble}
+\newline \textbf{Mise en plan du support des pieds}
+\newline \textbf{Mise en plan du support de la tête de lecture}
+
 \iffalse
 
     %Anneau de LEDs
@@ -68,5 +79,16 @@
 
     % Pieds réglables
     \includepdf[pages=-]{Annexes/Pieds reglable}
+
+    %Mises en plans des pièces mécaniques
+    \includepdf[pages=-]{Annexes/Couplage Encodeur}
+    \includepdf[pages=-]{Annexes/Couplage Tige}
+    \includepdf[pages=-]{Annexes/Liaison chariot}
+    \includepdf[pages=-]{Annexes/Liaison Moteur}
+    \includepdf[pages=-]{Annexes/Support Amortisseur}
+    \includepdf[pages=-]{Annexes/Support Amortisseur 2}
+    \includepdf[pages=-]{Annexes/Support Guidage Cable}
+    \includepdf[pages=-]{Annexes/Support Pieds}
+    \includepdf[pages=-]{Annexes/Support Tete Lecture}
 
 \fi
