--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -10,7 +10,7 @@ Il convient de développer, assembler et faire fonctionner la maquette du pendul
 \end{figure}
 
 \section{Cas d'utilisation}\label{sec:CasUtil}
-Lors des événements de la HEIG-VD, les visiteurs peuvent interagir avec la maquette de plusieurs manières. Une interface est présente et permet d'effectuer des opérations variées mais il est aussi possible de déstabiliser le pendule pour observer comment il arrive à se rattraper. Un affichage permettrait d'observer comment la régulation fonctionne en temps réel.
+Lors des événements de la HEIG-VD, les visiteurs peuvent intéragir avec la maquette de plusieurs manières. Une interface est présente et permet d'effectuer des opérations variées mais il est aussi possible de déstabiliser le pendule pour observer comment il arrive à se rattraper. Un affichage permettrait d'observer comment la régulation fonctionne en temps réel.
 La figure \ref{fig:CasUtil} illustre ce cas d'utilisation typique.
 
 \begin{figure}[H]
@@ -62,16 +62,16 @@ On détermine les fonctions suivantes dans le tableau \ref{tab:Fonctions} à par
     \resizebox{\textwidth}{!}{%
         \begin{tabular}{|l|l|l|}
             \hline
-            \# & Fonctions système                                                                & Besoin    \\ \hline
-            F1 & Doit pouvoir tenir en équilibre                                                  & N5.1/N6.2 \\ \hline
-            F2 & Doit pouvoir être autonome                                                       & N5.1/N6.2 \\ \hline
-            F3 & Doit pouvoir se mettre en équilibre tout seul depuis la position de repos        & N5.1/N6.2 \\ \hline
-            F4 & Doit permettre aux visiteurs d'effectuer des actions programmées sur le pendule. & N5.1      \\ \hline
-            F5 & Doit permettre aux visiteurs de déséquilibrer le système.                        & N5.1      \\ \hline
-            F6 & Doit expliquer aux visiteurs comment fonctionne le système.                      & N5.1/N6.1 \\ \hline
-            F7 & Doit pouvoir tenir sur une table.                                                & N5.2      \\ \hline
-            F8 & Doit pouvoir être alimenté facilement.                                           & N5.2      \\ \hline
-            F9 & Doit respecter les normes EN ISO 12100 de la SUVA sur la sécurité des machines   & N5.3      \\ \hline
+            \# & Fonctions système                                                                              & Besoin    \\ \hline
+            F1 & Doit pouvoir tenir en équilibre                                                                & N5.1/N6.2 \\ \hline
+            F2 & Doit pouvoir être autonome                                                                     & N5.1/N6.2 \\ \hline
+            F3 & Doit pouvoir se mettre en équilibre tout seul depuis la position de repos                      & N5.1/N6.2 \\ \hline
+            F4 & Doit permettre aux visiteurs d'effectuer des actions programmées sur le pendule.               & N5.1      \\ \hline
+            F5 & Doit permettre aux visiteurs de déséquilibrer le système.                                      & N5.1      \\ \hline
+            F6 & Doit expliquer aux visiteurs comment fonctionne le système.                                    & N5.1/N6.1 \\ \hline
+            F7 & Doit pouvoir tenir sur une table.                                                              & N5.2      \\ \hline
+            F8 & Doit pouvoir être alimenté facilement.                                                         & N5.2      \\ \hline
+            F9 & Doit respecter les normes EN ISO 12100 de la SUVA \cite{NormeISO} sur la sécurité des machines & N5.3      \\ \hline
         \end{tabular}%
     }
 \end{table}
